News UAT/force-app/main/default/objects/Job_History__c/Job_History__c.object-meta.xml
<CustomObject>
    <description>Captures the job history of a contact when their &lt;Account&gt; &lt;Status&gt; or &lt;Title&gt; changes.

Cannot use audit history, as relationships back to Account is not captured within audit history hence cannot display contact history on accounts.</description>
    <label>Job History</label>
    <nameField>
        <displayFormat>JHST{0000000}</displayFormat>
        <label>JobHist ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>