News UAT/force-app/main/default/objects/Job_History__c/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>