News UAT/force-app/main/default/objects/Job_History__c/fields/Date_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Change__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>Date of Change</label>
    <type>Date</type>
</CustomField>